2004-12-06  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* *.m4: quote the name of the macro in AC_DEFUN

2004-10-06  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* configure.in (VERSION): 
	* configure.ac (VERSION): back to 1.3.6cvs

2004-10-05  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* configure.in (VERSION): 
	* configure.ac (VERSION): set to 1.3.5

2004-09-29  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* configure.in: 
	* configure.ac: remove variable RPM_FRONTEND_DEPS

2004-03-01  Zvezdan Petkovic  <zvezdan@cs.wm.edu>

	* qt.m4 (QT_DO_IT_ALL): if the variables MOC or UIC are set, honor
	their value

2004-02-19  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* configure.in (VERSION): 
	* configure.ac (VERSION): back to cvs work

2004-02-18  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* configure.in (VERSION): 
	* configure.ac (VERSION): set version to 1.3.4

2003-12-30  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* configure.ac (ALL_LINGUAS): 
	* configure.in (ALL_LINGUAS): remove poorly supported languages

2003-09-26  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* configure.in (VERSION): 
	* configure.ac (VERSION): back to cvs work

2003-09-25  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* configure.in (VERSION): 
	* configure.ac: set version to 1.3.3

2003-07-22  John Levon  <levon@movementarian.org>

	* configure.ac:
	* configure.in: Aiksaurus 1.0 support

2003-05-30  Angus Leeming  <leeming@lyx.org>

	* xforms.m4 (LYX_CHECK_XFORMS_IMAGE_LOADER): clean-up instigated by
	Rob Lahaye to ensure that the configure test succeeds with
	xforms 1.0.2 and, moreover, that this will not break the final
	linking step under cygwin.

2003-07-15  Angus Leeming  <leeming@lyx.org>

	* lyxinclude.m4: Do not pass the -Winline option to gcc.

2003-07-03  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* configure.in:
	* configure.ac: only add X libraries to LIBS if --disable-x has
	not been passed to configure (useful for Qt/Mac)
