@@ -248,6 +248,9 @@ LYX_CHECK_DECL(vsnprintf, stdio.h)
 LYX_CHECK_DECL(istreambuf_iterator, iterator)
 LYX_CHECK_DECL(mkstemp,[unistd.h stdlib.h])
 
+# Check the form of mkdir()
+AC_FUNC_MKDIR
+
 dnl This is a slight hack: the tests generated by autoconf 2.52 do not
 dnl work correctly because of some conflict with stdlib.h with g++ 2.96
 dnl We aim to remove this eventually, since we should test as much as
@@ -335,6 +338,20 @@ extern "C"
 #endif
 int mkstemp(char*);
 #endif
+#endif
+
+#if HAVE_MKDIR
+#  if MKDIR_TAKES_ONE_ARG
+     /* MinGW32 */
+#    define mkdir(a, b) mkdir(a)
+#  endif
+#else
+#  if HAVE__MKDIR
+     /* plain Windows 32 */
+#    define mkdir(a, b) _mkdir(a)
+#  else
+#    error "Don't know how to create a directory on this system."
+#  endif
 #endif
 
 #ifdef __EMX__
