@@ -1,3 +1,10 @@
+2003-12-15  Angus Leeming  <leeming-0hXrFu2P2+c@public.gmane.org>
+
+	* lyxinclude.m4: define AC_FUNC_MKDIR.
+
+	* configure.ac: add AC_FUNC_MKDIR test and code to
+	#define mkdir should a non-POSIX version be found.
+
 2004-12-06  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>
 
 	* *.m4: quote the name of the macro in AC_DEFUN
